Minor improvement with JVM options